# RemoteBash

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  go.mod  go.sum  main.py  pyproject.toml
cmd/remotebash/: main.go
internal/api/: routes.go  routes_test.go  ws_terminal.go
internal/config/: config.go
internal/database/: loghandler.go  sqlite.go  sqlite_test.go
internal/manager/: manager.go  manager_test.go
internal/mcp/: server.go
internal/models/: models.go
internal/server/: server.go  trailing_slash_test.go
internal/ssh/: client.go  relay.go  safe_rm.go  shell.go  shell_test.go
remotebash/: app.py  config.py
remotebash/api/: audit_router.py  routes.py  tools.py  ws.py
remotebash/core/: database.py  manager.py  persistent_shell.py  session.py  tunnel_relay.py
remotebash/web/: dashboard.py
remotebash/web/static/js/: app.js  audit.js  terminal.js
remotebash/web/templates/: audit.html.j2  base.html.j2  dashboard.html.j2
remotebash/web/templates/partials/: add_form.html.j2  client_list.html.j2  edit_modal.html.j2  header.html.j2  terminal_modal.html.j2
scripts/: build.ps1  build.sh
tests/: test_dashboard_url.py  test_persistent_shell.py  test_session.py
web/: embed.go
web/static/js/: app.js  audit.js  guide.js  log.js  terminal.js
web/templates/: base.gohtml
web/templates/partials/: add_form.gohtml  audit_page.gohtml  client_list.gohtml  edit_modal.gohtml  guide_page.gohtml  log_page.gohtml  terminal_modal.gohtml
