[project]
name = "remotebash"
version = "0.1.0"
description = "Remote shell via SSH, exposed as a FastMCP tool with a web dashboard (FastAPI + Tailwind)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.20.0",
    "asyncssh>=2.0.0",
    "fastapi[standard]>=0.100.0",
    "fastmcp>=3.0.0",
    "jinja2>=3.0.0",
    "uvicorn[standard]>=0.30.0",
]

[project.scripts]
remotebash = "remotebash.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["remotebash"]

[dependency-groups]
dev = []
